# ProductLocatorAI

./: .replit  app.py  import_products.py  models.py  pyproject.toml  駅前商品の通路番号.csv  駅前商品の通路番号.json
static/: manifest.json
static/js/: app.js  barcode.js  sw.js
templates/: base.html  index.html
