[project]
name = "repl-nix-productlocatorai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=1.12.2",
    "google-generativeai>=0.8.3",
    "asyncio>=3.4.3",
]
